Updated wording on mega drop down title for Delivery & Growth

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 
 const whatWeDoCols = [
   {
-    title: 'Delivery & Growth Consulting',
+    title: 'Delivery & Growth',
     items: [
       {
         name: 'Work Unblocked',
