Updated LinkedIn URL to point to the company LinkedIn URL

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,7 +38,7 @@
         <a href="tel:+447397897186" class="hover:text-accent">0735 20 50 404</a>
       </p>
       <p class="text-sm mt-3">
-        <a href="https://www.linkedin.com" class="hover:text-accent" rel="noreferrer">Connect on LinkedIn</a>
+        <a href="https://www.linkedin.com/company/reignites/" class="hover:text-accent" rel="noreferrer">Connect on LinkedIn</a>
       </p>
     </div>
   </div>
