--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@
         &copy; {new Date().getFullYear()} Reignite Solutions. All rights reserved.
       </p>
       <p class="text-xs text-white/40 mt-4">
-        Built in West Yorkshire. Powered by Astro + Tailwind CSS.<br>
+        Built in Yorkshire. Powered by Astro + Tailwind CSS.<br>
         Hosted with Cloudflare for speed, reliability & security.
       </p>
 
